--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -15,8 +15,11 @@
 
 <body>
     <header class="fontColorOne fontColorTwo backgroundColorOne">
-        <div class="imageOne">
-            <a href="../index.html"> <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car"> </a>
+        <div class="imageFour">
+            <a href="../index.html">
+                <div class="imageThree">
+                </div>
+            </a>
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -89,7 +92,10 @@
     </main>
     <hr>
     <footer>
-        <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car">
+        <a href="../index.html">
+            <div class="imageEleven">
+            </div>
+        </a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
